@@ -1,5 +1,8 @@
 LIST OF CHANGES
 
+ - a partial reimplementation of the serialization framework for components
+   and compositions in order to speed-up frequenty used methods 
+
 release 91.10.0
  - script npg_samplesheet4MiSeq is removed this utility has been moved
    to a different git package; the samplesheet daemon stays in this
